--- a/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
+++ b/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
@@ -37,9 +37,14 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Crawler.cs" />
+    <Compile Include="Types\LevelUp.cs" />
+    <Compile Include="Types\Workout.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Types\" />
   </ItemGroup>
 </Project>
