[Core] Added ExerciseListCrawler to get the list of exercises
Used ExerciseListCrawler to create the Exercises enum in
Exercises.cs
WorkoutFactory would be used to get the correct exercise

--- a/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
+++ b/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
@@ -39,6 +39,9 @@
     <Compile Include="Crawler.cs" />
     <Compile Include="Types\LevelUp.cs" />
     <Compile Include="Types\Workout.cs" />
+    <Compile Include="WorkoutFactory.cs" />
+    <Compile Include="Exercises.cs" />
+    <Compile Include="ExerciseListCrawler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
