--- a/Cassini.FitocracyAnalyzer.CLI/Cassini.FitocracyAnalyzer.CLI.csproj
+++ b/Cassini.FitocracyAnalyzer.CLI/Cassini.FitocracyAnalyzer.CLI.csproj
@@ -23,7 +23,7 @@
         <Variable name="MONO_IOMAP" value="all" />
       </EnvironmentVariables>
     </EnvironmentVariables>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
