--- a/Cassini.FitocracyAnalyzer.Fetcher/Cassini.FitocracyAnalyzer.Fetcher.csproj
+++ b/Cassini.FitocracyAnalyzer.Fetcher/Cassini.FitocracyAnalyzer.Fetcher.csproj
@@ -34,6 +34,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebUtils.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="FirocracyLogin.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
