Managed to login into Fitocracy

--- a/Cassini.FitocracyAnalyzer.Fetcher/Cassini.FitocracyAnalyzer.Fetcher.csproj
+++ b/Cassini.FitocracyAnalyzer.Fetcher/Cassini.FitocracyAnalyzer.Fetcher.csproj
@@ -35,6 +35,7 @@
     <Compile Include="WebUtils.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="FirocracyLogin.cs" />
+    <Compile Include="FitocracyHttpClient.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
