Extracted all the rep parsing into a single method and used delegate to exercise specific work
* Craeted RawRep to hold the parsed rep data, which is not completely parsed
* Added overridden ToString to Exercise, ExerciseSet, WeightSet, DistanceSet
* Made ExerciseSet.TimeTaken as nullable
* Added ExerciseSet.IsPr for PR sets
* Updated GetPointsAndRepData to parse for PR

--- a/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
+++ b/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Exercises.cs" />
     <Compile Include="ExerciseListCrawler.cs" />
     <Compile Include="Types\Exercise.cs" />
+    <Compile Include="Types\RawRep.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
