Added support for saving a Workout

--- a/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
+++ b/Cassini.FitocracyAnalyzer.Core/Cassini.FitocracyAnalyzer.Core.csproj
@@ -33,6 +33,9 @@
       <HintPath>..\packages\Selenium.WebDriver.2.44.0\lib\net40\WebDriver.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -44,6 +47,7 @@
     <Compile Include="ExerciseListCrawler.cs" />
     <Compile Include="Types\Exercise.cs" />
     <Compile Include="Types\RawRep.cs" />
+    <Compile Include="FitocracyIO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
